# pogla

./: .gitignore  CMakeLists.txt  README.md  fragment.shd  main.cpp  matrix4.cpp  matrix4.h  mesh.cpp  mesh.h  program.cpp  program.h  vertex.shd  verts.h
meshes/: cube.mtl  fish.mtl
scenes/: bridge.yaml  bridge_rot.yaml  bridge_track.yaml  coin_pile.yaml  house0.yaml  medieval1.yaml  medieval_rot.yaml  scene0.yaml  scene0_no_nor.yaml  scene1.yaml  scene2.yaml  well.yaml
shaders/: boids.shader  fragment.shd  particle_compute.shader  particle_compute.shd  particle_fragment.shader  particle_vertex.shader  skybox_vertex.shader  spatial_sort.shader  vertex.shd
src/: CMakeLists.txt  basicmovable.cpp  basicmovable.h  bump.cpp  camera.cpp  camera.h  cameratracking.cpp  cameratracking.h  clock.cpp  crowd_sim.cpp  gl_err.h  image.h  image_io.cpp  inputmanager.cpp  inputmanager.h  light.cpp  light.h  main.cpp  material.cpp  material.h  matrix4.cpp  matrix4.h  mesh.cpp  mesh.h  movable.h  object_renderer.cpp  object_renderer.h  program.cpp  scene.cpp  scene.h  texturemanager.cpp  texturemanager.h  trajectory.cpp  trajectory.h  trajectory_function.h  vec3.cpp  vec3.h  vector.h  verts.h  waypoint_trajectory.cpp  (+1 more)
src/mygl/: CMakeLists.txt  basicmovable.cpp  basicmovable.h  gl_err.h  inputmanager.cpp  inputmanager.h  lightmanager.cpp  lightmanager.h  movable.h  object_renderer.cpp  object_renderer.h  particle_system.cpp  particle_system.h  shadertypes.h  texturemanager.cpp  texturemanager.h
src/mygl/assets/: CMakeLists.txt  camera.cpp  camera.h  cameratracking.cpp  cameratracking.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  skybox.cpp  skybox.h  verts.h
src/mygl/program/: CMakeLists.txt  Program.cpp  Program.h  programbuilder.cpp  programbuilder.h  programbuilder.hpp
src/mygl/trajectory/: CMakeLists.txt  trajectory.cpp  trajectory.h
src/utils/: CMakeLists.txt  clock.h  image.cpp  image.h  image_io.h  matrix4.h  vector.h
textures/: brick.tga  brick_normal.tga  brick_texture.tga  dark_rock_normal.tga  dark_rock_texture.tga  fish_uv.tga  gold.tga  normal_stones.tga  pebble_normal.tga  pebble_texture.tga  plank_normal.tga  plank_texture.tga  red_rock_normal.tga  red_rock_texture.tga  red_wood_normal.tga  red_wood_texture.tga  rock_normal.tga  rock_texture.tga  rust_normal.tga  rust_texture.tga  sand.tga  wood_normal.tga  wood_texture.tga
textures/skybox/: negx.tga  negy.tga  negz.tga  posx.tga  posy.tga  posz.tga
